--- a/habit-tracker-frontend/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -3,7 +3,8 @@
   class="list-box" 
   (click)="onListClicked(taskList.isCollapsed)" 
   [cdkDragData]="taskList"
-  [cdkDragDisabled]="dragDisabled">
+  [cdkDragDisabled]="dragDisabled"
+>
   <div cdkDragHandle class="drag-handle" *ngIf="isEditMode && taskList.isCollapsed">
     <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
   </div>
