--- a/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -26,7 +26,15 @@
                         <ion-icon class="list-icons" name="reorder-two-outline"></ion-icon>
                     </div>
                     <div class="tasklist-item-box list-item-row"> 
-                        <ion-checkbox class="list-checkbox" justify="start" labelPlacement="end" [checked]="listItem.completed" (ionChange)="onListItemClickedEvent(listItem)">{{ listItem.name }}</ion-checkbox>
+                        <ion-checkbox 
+                            class="list-checkbox"
+                            justify="start" 
+                            labelPlacement="end" 
+                            [checked]="listItem.completed" 
+                            (ionChange)="onListItemClickedEvent(listItem)"
+                        >
+                            {{ listItem.name }}
+                        </ion-checkbox>
                         <div *ngIf="isEditMode" class="item-add-icon-box" slot="end" (click)="makeItemListClicked()">
                             <ion-icon class="list-icons" name="add-outline"></ion-icon>
                         </div>
