--- a/habit-tracker-frontend/src/app/pages/habit-statistics/habit-statistics.page.html
+++ b/habit-tracker-frontend/src/app/pages/habit-statistics/habit-statistics.page.html
@@ -1,8 +1,1 @@
-<ion-header class="ion-padding">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title size="large">Habit Stats</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-page-header [title]="title"></app-page-header>
