--- a/habit-tracker-frontend/src/app/pages/lists-home/lists-home.page.scss
+++ b/habit-tracker-frontend/src/app/pages/lists-home/lists-home.page.scss
@@ -1,7 +1,15 @@
-.filter-header {
-    height: 40px;
+.lp-header-container {
+    height: 10%;
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: flex-end;
+}
+
+.lp-header-filter-button {
+    justify-items: flex-start;
+    padding-left: 5px;
+}
+
+.lp-header-searchbar-box {
+    justify-items: auto;
 }
