Add linter and fix lint errors

--- a/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
+++ b/habit-tracker-frontend/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
@@ -17,7 +17,7 @@
           ></daily-task-list-list-item>
         </ng-container>
       </ng-container>
-      <ng-container *ngIf="taskList.listItems.length == 0">
+      <ng-container *ngIf="taskList.listItems.length === 0">
         <div class="ion-text-center ion-padding">
           <ion-text>Your daily task list is empty. Create a task below to start!</ion-text>
         </div>
