--- a/src/app/components/daily-task-list/list-item/list-item.component.scss
+++ b/src/app/components/daily-task-list/list-item/list-item.component.scss
@@ -1,4 +1,4 @@
-.item-add-icon-box {
+.item-edit-icon-box {
   display: flex;
   flex-direction: row;
   position: absolute;
@@ -10,12 +10,6 @@
   z-index: 10;
   right: 30px;
   cursor: pointer;
-}
-
-.item-add-icon {
-  color: var(--ion-text-color);
-  height: 20px;
-  width: 20px;
 }
 
 .tasklist-item-box {
