--- a/src/global.scss
+++ b/src/global.scss
@@ -121,3 +121,13 @@ ion-checkbox {
   flex-direction: row;
   align-items: center;
 }
+
+button.alert-button.alert-button-delete {
+  background-color: var(--ion-color-danger);
+  color: var(--ion-color-danger-contrast);
+}
+
+button.alert-button.alert-button-save {
+  background-color: var(--ion-color-primary);
+  color: var(--ion-color-primary-contrast);
+}
