Fixing main list item styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
   <ion-menu [type]="'reveal'" contentId="main-content">
     <ion-menu-toggle autoHide="false">
-      <ion-header class="ion-padding">
+      <ion-header>
         <ion-toolbar>
           <ion-icon
             class="ion-padding"
