--- a/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
+++ b/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
@@ -1,5 +1,5 @@
-<ion-card>
-  <ion-card-content class="daily-task-list-card">
+<ion-card class="dtl-card">
+  <ion-card-content class="dtl-main-content">
     <div
       cdkDropList
       id="{{ taskList.id }}"
