--- a/src/app/pages/daily-task-list/daily-task-list.page.html
+++ b/src/app/pages/daily-task-list/daily-task-list.page.html
@@ -1,5 +1,5 @@
 <app-page-header [title]="title"></app-page-header>
-<ion-content class="ion-padding">
+<ion-content>
   <app-daily-task-list
     [taskList$]="dailyTaskListStateFacade.dailyTaskList$"
   ></app-daily-task-list>
