--- a/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.scss
+++ b/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.scss
@@ -1,10 +1,18 @@
 .main-list-div {
   border: solid 1px var(--ion-color-step-300);
   border-radius: 4px;
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-.daily-task-list-card {
+.dtl-card {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.dtl-main-content {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  padding: 0;
 }
