--- a/src/app/components/daily-task-list/list-item/list-item.component.scss
+++ b/src/app/components/daily-task-list/list-item/list-item.component.scss
@@ -1,27 +1,13 @@
-.item-edit-icon-box {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  align-items: center;
-  width: 22px;
-  height: 22px;
-  border-radius: 50%;
-  background: var(--ion-color-step-100);
-  z-index: 10;
-  right: 30px;
-  cursor: pointer;
+.dtl-item-name {
+  color: var(--ion-text-color);
+  font-size: 16px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.tasklist-item-box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.list-item-row {
-  background-color: var(--ion-card-background);
-  grid-column: 1;
-  grid-row: 1;
-  z-index: 2;
+.edit-icon {
+  margin-left: auto;
+  margin-right: 10px;
+  padding-left: 10px;
+  flex-shrink: 0;
 }
