--- a/src/global.scss
+++ b/src/global.scss
@@ -25,22 +25,28 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-.list-div {
-  width: 500px;
-  max-width: 100%;
-  min-height: 60px;
-  display: block;
-  background: white;
-  overflow: hidden;
-  background: var(--ion-card-background);
-}
+// .list-div {
+//   width: 500px;
+//   max-width: 100%;
+//   min-height: 60px;
+//   display: block;
+//   background: white;
+//   overflow: hidden;
+//   background: var(--ion-card-background);
+// }
 
 .list-box {
-  padding: 20px 10px;
+  width: 100%;
+  min-height: 70px;
+  max-height: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 10px 10px 10px 10px;
   border-bottom: solid 1px var(--ion-color-step-300);
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   font-size: 16px;
   cursor: pointer;
@@ -57,9 +63,7 @@
 
 .list-checkbox {
   padding-left: 10px;
-  padding-right: 10px;
-  overflow: hidden;
-  max-width: 85%;
+  padding-right: 15px;
 }
 
 .cdk-drag-preview {
@@ -110,16 +114,6 @@ ion-checkbox {
 
 .new-task-input-box-inset {
   padding-left: 20px;
-}
-
-.list-item-container {
-  display: grid;
-}
-
-.dtl-list-checkbox-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 }
 
 button.alert-button.alert-button-delete {
