Fixed styling on DTL, fixed edit modal, and added new task modal

--- a/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
+++ b/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.html
@@ -3,7 +3,7 @@
     <div
       cdkDropList
       id="{{ taskList.id }}"
-      class="list-div main-list-div"
+      class="dtl-list-box-drag main-list-div"
       (cdkDropListDropped)="onItemDropped($event)"
       [cdkDropListData]="(taskList$ | async)!.listItems"
       [cdkDropListConnectedTo]="connectedLists"
