--- a/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -1,36 +1,28 @@
 <div
   cdkDrag
-  class="list-box"
-  (click)="onListClicked(taskList.isCollapsed)"
+  class="dtl-list-box inset-list-header"
   [cdkDragData]="taskList"
   [cdkDragDisabled]="dragDisabled"
 >
-  <div class="inset-list-box drag-handle">
-    <ion-checkbox
-      class="list-disabled-checkbox list-checkbox"
-      justify="start"
-      labelPlacement="end"
-      [checked]="taskList.completed"
-      >{{ taskList.name }}</ion-checkbox
-    >
+  <div class="dtl-list-clickable-box" (click)="onListClicked(taskList.isCollapsed)">
     <ion-icon
-      class="list-icons"
-      name="chevron-down-outline"
-      slot="end"
-      *ngIf="taskList.isCollapsed"
-    ></ion-icon>
-    <ion-icon
-      class="list-icons"
-      name="chevron-up-outline"
-      slot="end"
-      *ngIf="!taskList.isCollapsed"
-    ></ion-icon>
+    class="dtl-list-icons chevron-icon"
+    name="chevron-down-outline"
+    *ngIf="taskList.isCollapsed"
+  ></ion-icon>
+  <ion-icon
+    class="dtl-list-icons chevron-icon"
+    name="chevron-up-outline"
+    *ngIf="!taskList.isCollapsed"
+  ></ion-icon>
+  <p class="dtl-item-name">{{ taskList.name }}</p>
   </div>
+  <ion-icon class="dtl-list-icons dtl-edit-icon" name="ellipsis-vertical-outline" (click)="itemEditClicked()"></ion-icon>
 </div>
 <div
   cdkDropList
   id="{{ taskList.id }}"
-  class="list-div inset-list-div"
+  class="dtl-list-box-drag inset-list-box"
   *ngIf="!taskList.isCollapsed"
   (cdkDropListDropped)="onItemDropped($event)"
   [cdkDropListData]="taskList.listItems"
@@ -40,32 +32,21 @@
   <div
     cdkDrag
     *ngFor="let item of taskList.listItems; index as i"
-    class="list-box inset-list-item"
+    class="dtl-list-box inset-list-item"
     [cdkDragData]="item"
     (cdkDragMoved)="dragMoved($event)"
     (cdkDragReleased)="dragReleased($event)"
-    #insetListItemContainer
+    id="{{ item.id }}"
   >
-    <div class="inset-list-item-row drag-handle" id="{{ item.id }}">
-      <ng-container>
-        <div class="dtl-checkbox-row">
-          <ion-checkbox
-            class="list-checkbox"
-            justify="start"
-            labelPlacement="end"
-            [checked]="item.completed"
-            (ionChange)="listItemClickedEvent(item)"
-            >{{ item.name }}</ion-checkbox
-          >
-          <div
-              class="item-edit-icon-box"
-              slot="end"
-              (click)="itemEditClicked()"
-            >
-              <ion-icon class="list-icons" name="ellipsis-vertical-outline"></ion-icon>
-            </div>
-        </div>
-      </ng-container>
-    </div>
+  <div class="dtl-list-clickable-box" (click)="listItemClickedEvent(item)">
+    <ion-checkbox
+      class="dtl-list-checkbox"
+      justify="start"
+      labelPlacement="end"
+      [checked]="item.completed"
+      ></ion-checkbox>
+    <p class="dtl-item-name">{{ item.name }}</p>
+  </div>
+  <ion-icon class="dtl-list-icons dtl-edit-icon" name="ellipsis-vertical-outline" (click)="itemEditClicked(item)"></ion-icon>
   </div>
 </div>
