--- a/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -10,18 +10,19 @@
     [cdkDragData]="listItem"
     (cdkDragMoved)="dragMoved($event)"
     (cdkDragReleased)="dragReleased($event)"
-    class="list-box"
+    class="dtl-list-box"
     #listItemContainer
-    (click)="onListItemClickedEvent()"
   >
+  <div class="dtl-list-clickable-box" (click)="onListItemClickedEvent()">
     <ion-checkbox
-      class="list-checkbox"
+      class="dtl-list-checkbox"
       justify="start"
       labelPlacement="end"
       [checked]="listItem.completed"
     >
     </ion-checkbox>
     <p class="dtl-item-name">{{ listItem.name }}</p>
-    <ion-icon class="list-icons edit-icon" name="ellipsis-vertical-outline" (click)="itemEditClicked()"></ion-icon>
+  </div>
+  <ion-icon class="dtl-list-icons dtl-edit-icon" name="ellipsis-vertical-outline" (click)="itemEditClicked()"></ion-icon>
   </div>
 </ng-container>
