--- a/src/app/components/shared/page-header/page-header.component.html
+++ b/src/app/components/shared/page-header/page-header.component.html
@@ -1,4 +1,4 @@
-<ion-header class="">
+<ion-header>
   <ion-toolbar>
     <div class="page-header-grid-container">
       <ion-buttons class="page-header-menu-button">
