--- a/src/app/components/daily-task-list/new-task-modal/new-task-modal.component.html
+++ b/src/app/components/daily-task-list/new-task-modal/new-task-modal.component.html
@@ -5,9 +5,7 @@
     </ion-buttons>
     <ion-title>New Task</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="saveClicked()" color="primary"
-        >Save</ion-button
-      >
+      <ion-button (click)="saveClicked()" color="primary">Save</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
