--- a/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -20,6 +20,7 @@
     ></ion-icon>
     <p class="dtl-item-name">{{ taskList.name }}</p>
   </div>
+  <p>{{ completedTaskCount }}/{{ taskList.listItems.length }}</p>
   <ion-icon
     class="dtl-list-icons dtl-edit-icon"
     name="ellipsis-vertical-outline"
