--- a/src/app/pages/daily-task-list/daily-task-list.page.html
+++ b/src/app/pages/daily-task-list/daily-task-list.page.html
@@ -1,7 +1,7 @@
 <app-page-header [title]="title"></app-page-header>
 <ion-content>
   <app-daily-task-list
-    [taskList$]="dailyTaskListStateFacade.dailyTaskList$"
+    [taskList]="dailyTaskList"
   ></app-daily-task-list>
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button (click)="onNewTaskClicked()">
