--- a/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -1,13 +1,13 @@
-<ng-container *ngIf="isList(listItem)">
+<ng-container *ngIf="isList(listItem())">
   <app-daily-task-list-inset-list
-    [taskList]="listItem"
+    [listItemId]="listItem().id"
     (listItemClicked)="onListItemClickedEvent()"
   ></app-daily-task-list-inset-list>
 </ng-container>
-<ng-container *ngIf="!isList(listItem)">
+<ng-container *ngIf="!isList(listItem())">
   <div
     cdkDrag
-    [cdkDragData]="listItem"
+    [cdkDragData]="listItem()"
     (cdkDragMoved)="dragMoved($event)"
     (cdkDragReleased)="dragReleased($event)"
     class="dtl-list-box"
@@ -18,10 +18,10 @@
         class="dtl-list-checkbox"
         justify="start"
         labelPlacement="end"
-        [checked]="listItem.completed"
+        [checked]="isListItemCompleted()"
       >
       </ion-checkbox>
-      <p class="dtl-item-name">{{ listItem.name }}</p>
+      <p class="dtl-item-name">{{ listItem().name }}</p>
     </div>
     <ion-icon
       class="dtl-list-icons dtl-edit-icon"
