--- a/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -4,10 +4,7 @@
   [cdkDragData]="taskList()"
   [cdkDragDisabled]="!isCollapsed"
 >
-  <div
-    class="dtl-list-clickable-box"
-    (click)="onListClicked()"
-  >
+  <div class="dtl-list-clickable-box" (click)="onListClicked()">
     <ion-icon
       class="dtl-list-icons chevron-icon"
       name="chevron-down-outline"
