--- a/src/app/pages/user-profile/user-profile.page.html
+++ b/src/app/pages/user-profile/user-profile.page.html
@@ -1,1 +1,10 @@
 <app-page-header [title]="title"></app-page-header>
+<ion-content>
+    <ion-button
+        color="primary"
+        fill="solid"
+        (click)="logoutClicked()"
+    >
+    Logout
+    </ion-button>
+</ion-content>
