--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,11 +16,7 @@
         (ionInput)="setPassword($any($event))"
       ></ion-input>
     </ion-item>
-    <ion-button 
-      color="primary"
-      fill="solid"
-      (click)="loginClicked()"
-    >
+    <ion-button color="primary" fill="solid" (click)="loginClicked()">
       Login
     </ion-button>
   </div>
