--- a/src/app/pages/user-profile/user-profile.page.html
+++ b/src/app/pages/user-profile/user-profile.page.html
@@ -1,10 +1,6 @@
 <app-page-header [title]="title"></app-page-header>
 <ion-content>
-    <ion-button
-        color="primary"
-        fill="solid"
-        (click)="logoutClicked()"
-    >
+  <ion-button color="primary" fill="solid" (click)="logoutClicked()">
     Logout
-    </ion-button>
+  </ion-button>
 </ion-content>
