--- a/src/app/components/daily-task-list/edit-task-modal/edit-task-modal.component.scss
+++ b/src/app/components/daily-task-list/edit-task-modal/edit-task-modal.component.scss
@@ -2,3 +2,23 @@ ion-alert {
   --backdrop-opacity: 0.8;
   --background: var(--ion-card-background);
 }
+
+.content-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.input-box {
+  margin: 15px 10px 10px 15px;
+  width: 80%;
+  max-width: 400px;
+}
+
+.modal-button {
+  margin: 15px 10px 10px 15px;
+  width: 65%;
+  max-width: 300px;
+}
