--- a/src/app/components/login/login-modal/login-modal.component.html
+++ b/src/app/components/login/login-modal/login-modal.component.html
@@ -17,7 +17,12 @@
       (ionInput)="setPassword($any($event))"
     ></ion-input>
   </ion-item>
-  <ion-button color="primary" fill="solid" shape="round" (click)="loginClicked()">
+  <ion-button
+    color="primary"
+    fill="solid"
+    shape="round"
+    (click)="loginClicked()"
+  >
     Login
   </ion-button>
 </div>
